# meta_env

./: Dockerfile  README.md  __init__.py  client.py  environment.py  graders.py  inference.py  metadata.json  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
graders/: __init__.py  task_0.py  task_1.py  task_2.py
server/: app.py  requirements.txt  your_environment.py
tasks/: __init__.py  task_0.py  task_1.py  task_2.py
